--- a/platforms/android/assets/www/templates/Old/menuoldtestament.html
+++ b/platforms/android/assets/www/templates/Old/menuoldtestament.html
@@ -5,7 +5,12 @@
                 <div class="masthead_text"><h1>Old Testament</h1><h2>구약</h2></div>
             </div>
             <div class="list">
-                <div class="list_item"><a href="#/app/old/genesis"><span class="listlink">Genesis 창세기</span></a></div>
+                <!-- <div class="list_item"><a href="#/app/old/genesis"><span class="listlink">Genesis 창세기</span></a></div>-->
+                <!-- Test-->
+                <div class="list_item"><a href="#/app/old/text/genesis"><span class="listlink">Genesis text</span></a></div>
+                <div class="list_item"><a href="#/app/old/json/genesis"><span class="listlink">Genesis json</span></a></div>
+                <div class="list_item"><a href="#/app/old/xml/genesis"><span class="listlink">Genesis xml</span></a></div>
+                <!-- Test-->
                 <div class="list_item"><a href="#"><span class="listlink">Exodus 출애굽기</span></a></div>
                 <div class="list_item"><a href="#"><span class="listlink">Leviticus 레위기</span></a></div>
                 <div class="list_item"><a href="#"><span class="listlink">Numbers 민수기</span></a></div>
